margem das setas de ordenação

--- a/documentos/templates/documentos/tabela_documentos.html
+++ b/documentos/templates/documentos/tabela_documentos.html
@@ -74,12 +74,12 @@
 
         <thead class="table-info">
           <tr>
-            <th scope="col" style="text-align: center;width:auto;">Projeto</th>
-            <th scope="col" style="text-align: center;width:auto;">Estudantes</th>
-            <th scope="col" style="text-align: center;width:auto;">Orientador</th>
-            <th scope="col" style="text-align: center;width:auto;">Período</th>
-            <th scope="col" style="text-align: center;width:auto;">Organização</th>
-            <th scope="col" style="text-align: center;width:auto;">Documentos</th>
+            <th scope="col" style="text-align: center;width:auto;"><span style="margin-right: 0.6ex;">Projeto</span></th>
+            <th scope="col" style="text-align: center;width:auto;"><span style="margin-right: 0.6ex;">Estudantes</span></th>
+            <th scope="col" style="text-align: center;width:auto;"><span style="margin-right: 0.6ex;">Orientador</span></th>
+            <th scope="col" style="text-align: center;width:auto;"><span style="margin-right: 0.6ex;">Período</span></th>
+            <th scope="col" style="text-align: center;width:auto;"><span style="margin-right: 0.6ex;">Organização</span></th>
+            <th scope="col" style="text-align: center;width:auto;"><span style="margin-right: 0.6ex;">Documentos</span></th>
           </tr>
         </thead>
         <tbody>
