--- a/organizacoes/templates/organizacoes/organizacoes_tabela.html
+++ b/organizacoes/templates/organizacoes/organizacoes_tabela.html
@@ -25,8 +25,8 @@
       <table id="organizacoes"class="table table-bordered table-hover table-sm" style="width: auto;">
         <thead class="table-info">
           <tr>
-            <th scope="col" style="text-align: center;width:425px;">Organização</th>
-            <th scope="col" style="text-align: center;width:70px;">Projetos</th>
+            <th scope="col" style="text-align: center;width:425px;"><span style="margin-right: 0.6ex;">Organização</span></th>
+            <th scope="col" style="text-align: center;width:70px;"><span style="margin-right: 0.6ex;">Projetos</span></th>
           </tr>
         </thead>
         {% for organizacao,projetos in organizacoes %} 
