--- a/professores/templates/professores/coorientadores_tabela_completa.html
+++ b/professores/templates/professores/coorientadores_tabela_completa.html
@@ -24,8 +24,8 @@
       <table id="professores"class="table table-bordered table-hover table-sm" style="width: auto;">
         <thead class="table-info">
           <tr>
-            <th scope="col" style="text-align: center;width:300px;">Nome</th>
-            <th scope="col" style="text-align: center;width:70px;">Grupos</th>
+            <th scope="col" style="text-align: center;width:300px;"><span style="margin-right: 0.6ex;">Nome</span></th>
+            <th scope="col" style="text-align: center;width:70px;"><span style="margin-right: 0.6ex;">Grupos</span></th>
           </tr>
         </thead>
         {% for professor, grupos in professores %} 
