--- a/templates/tabelas_includes.html
+++ b/templates/tabelas_includes.html
@@ -17,3 +17,4 @@
 <script src="{% static 'DataTables/Buttons-1.7.0/js/buttons.html5.min.js' %}"></script>
 <script src="{% static 'DataTables/Buttons-1.7.0/js/buttons.print.min.js' %}"></script>
 <script src="{% static 'DataTables/Buttons-1.7.0/js/buttons.colVis.min.js' %}"></script>
+<script src="{% static 'DataTables/chinese-string.js' %}"></script>
