cursos como Models

--- a/users/templates/users/estudantes_notas.html
+++ b/users/templates/users/estudantes_notas.html
@@ -46,28 +46,7 @@
           {% for aluno in alunos_list %} 
           <tr class="item">
             <th scope="row" data-order="{{aluno.user.get_full_name}}">
-              <a href="{% url 'estudante_detail' aluno.id %}" 
-                  {% comment %}
-                  data-toggle="tooltip" data-html="true" animation="true" title="
-                  {% for opcao in aluno.opcao_set.all %}
-                    <b>#{{ opcao.prioridade }} :</b>
-                    {% with alocacoes=aluno.alocacao_set %}
-                      {% if alocacoes.count and opcao.proposta == alocacoes.last.projeto %}
-                        <u>
-                      {% endif %}
-                          {{opcao.proposta.titulo}}
-                        ({{opcao.proposta.organizacao.nome}})
-                      {% if alocacoes.count and opcao.proposta == alocacoes.last.projeto %}
-                        </u>
-                      {% endif %}
-                    {% endwith %}
-                    <br>
-                  {% empty %}
-                    Aluno(a) não escolheu opções de projetos
-                  {% endfor %}
-                  " 
-                  {% endcomment %}
-              >
+              <a href="{% url 'estudante_detail' aluno.id %}" >
                 {{aluno.user.get_full_name}}
                 {% if aluno.externo %}<span style="color:red">[{{aluno.externo}}]</span>{% endif %}
               </a>
@@ -76,34 +55,14 @@
               <a href="mailto:{{aluno.user.email}}"> &lt;{{aluno.user.email}}&gt;</a><br>
             </td>
             {% if aluno.curso %}
-              <td class="{% if aluno.curso == 'C' %}text-success{% elif aluno.curso == 'M' %}text-danger{% else %}text-warning{% endif %}">
+              {% comment %} <td style="color:#{% if aluno.curso == 'C' %}{{configuracao.cor_C}}{% elif aluno.curso == 'M' %}{{configuracao.cor_M}}{% elif aluno.curso == 'X' %}{{configuracao.cor_X}}{% else %}{{configuracao.cor_O}}{% endif %};"> {% endcomment %}
+              <td style="color:#{{ aluno.get_curso_color }};">
                 {{ aluno.get_curso_display }}
               </td>
             {% else %}
               <td>Indefinido</td>
             {% endif %}
-            {% comment %} <td class="{% if configuracao.ano == aluno.anoPFE and configuracao.semestre == aluno.semestrePFE %}text-success{% endif %}">
-              {% if aluno.alocacao_set.all %}
-                {% for alocacao in aluno.alocacao_set.all %}
-                  {% if alocacao.projeto.ano == ano and alocacao.projeto.semestre == semestre %}
-                    <a href="{% url 'projeto_completo' alocacao.projeto.id %}">
-                      {% if alocacao.projeto.avancado %}<u>{% endif %}
-                      {{alocacao.projeto.ano}}.{{alocacao.projeto.semestre}}<br>
-                      {% if alocacao.projeto.avancado %}</u>{% endif %}
-                    </a>
-                  {% endif %}
-                {% endfor %}
-              {% else %}
-                {% if aluno.anoPFE and aluno.semestrePFE %}
-                  {{aluno.anoPFE}}.{{aluno.semestrePFE}}
-                {% else %}
-                  Indefinido
-                {% endif %}
-              {% endif %}
-            </td> {% endcomment %}
-            <td 
-            {% comment %} class="{% if configuracao.ano == aluno.anoPFE and configuracao.semestre == aluno.semestrePFE %}text-success{% endif %}" {% endcomment %}
-            >
+            <td>
               {% if aluno.alocacao_set.all %}
                 {% for alocacao in aluno.alocacao_set.all %}
                   {% if ano == 0 or alocacao.projeto.ano == ano and alocacao.projeto.semestre == semestre %}
