--- a/professores/templates/professores/bancas_tabela.html
+++ b/professores/templates/professores/bancas_tabela.html
@@ -46,23 +46,14 @@
 
     </div>
 
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
-
     <script>
       function carrega_pagina() {
-        {% comment %} 
-          //var table = $('#ProjetosTable').DataTable();
-          //table.search("Bioengenharia").draw();
-        {% endcomment %}
       };
       window.onload = carrega_pagina
     </script>
 
   </div>
 
-  {% with tabela='Bancas' %}
-      {% include "edicoes_ajax.html" %}
-  {% endwith %}
+  {% include "edicoes_ajax.html" with tabela='Bancas' %}
 
 {% endblock %}
