--- a/professores/templates/professores/orientadores_tabela.html
+++ b/professores/templates/professores/orientadores_tabela.html
@@ -47,8 +47,6 @@
 
     </div>
 
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
 
     <script>
       function carrega_pagina() {
@@ -58,8 +56,6 @@
 
   </div>
 
-  {% with tabela='Orientacoes' %}
-      {% include "edicoes_ajax.html" %}
-  {% endwith %}
+  {% include "edicoes_ajax.html" with tabela='Orientacoes' %}
 
 {% endblock %}
