--- a/professores/templates/professores/todos_professores.html
+++ b/professores/templates/professores/todos_professores.html
@@ -66,15 +66,12 @@
   {% else %}
     <p>Não existem professores cadastradas.</p>
   {% endif %}
-  <p>&nbsp;</p>
 
   <script>
 
     function carrega_pagina(){
       {% include "tooltip.js" %}
-      {% with tabela='Professores' %}
-        {% include "tabelas_scripts.html" %}
-      {% endwith %}
+      {% include "tabelas_scripts.html" with tabela='Professores' %}
     }
     window.onload = carrega_pagina
 
