--- a/projetos/templates/projetos/analise_notas.html
+++ b/projetos/templates/projetos/analise_notas.html
@@ -49,9 +49,8 @@
         </span>
 
         {% comment %} Seletor da edição da pesquisa {% endcomment %}
-        {% with com_cursos=True %}
-            {% include "edicoes.html" %}
-        {% endwith %}
+        {% include "edicoes.html" with com_cursos=True %}
+
 
     </div>
 
@@ -559,8 +558,6 @@
     </div>
     </div>
 
-    {% with com_cursos=True %}
-        {% include "edicoes_ajax.html" %}
-    {% endwith %}
+    {% include "edicoes_ajax.html" with com_cursos=True %}
 
 {% endblock %}
