--- a/propostas/templates/propostas/propostas_apresentadas.html
+++ b/propostas/templates/propostas/propostas_apresentadas.html
@@ -664,10 +664,10 @@
     </script>
 
   </div>
-  <p>&nbsp;</p>
+  
+  {% include "edicoes_ajax.html" with tabela='Propostas' %}
 
-  {% with tabela='Propostas' %}
-    {% include "edicoes_ajax.html" %}
-  {% endwith %}
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
 
 {% endblock %}
