--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
   <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
   <script type="text/javascript" src="{% static 'js/pfe.js' %}"></script>
   <script src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
-  <script src="{% static 'popper-1.16.1/popper.min.js' %}"></script> {% comment %} Necessário para os tooltips edo Bootstrap {% endcomment %}
+  <script src="{% static 'popper-1.16.1/popper.min.js' %}"></script> {% comment %} Necessário para os tooltips e Bootstrap {% endcomment %}
   <script src="{% static 'bootstrap-4.3.1-dist/js/bootstrap.min.js' %}"></script>
   {% block head %}
   {% endblock %}
@@ -71,5 +71,6 @@
   <div style="margin-top: 6px;" class="container-fluid">
     {% block content %}{% endblock %}
   </div>
+  <p>&nbsp;</p><p>&nbsp;</p>
 </body>
 </html>
