--- a/users/templates/users/estudante_detail.html
+++ b/users/templates/users/estudante_detail.html
@@ -426,16 +426,10 @@
         <button style="float: right;">Editar</button>
         </a>
     {% endif %}
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
 
     <script>
-
-        function carrega_pagina() {  
-        }
-
+        function carrega_pagina() {  }
         window.onload = carrega_pagina
-    
     </script>   
 
 {% endblock %}
