--- a/users/templates/users/estudantes_notas.html
+++ b/users/templates/users/estudantes_notas.html
@@ -17,9 +17,7 @@
   <span class="titulo">Avaliações por Estudante</span>
 
   {% comment %} Seletor da edição da pesquisa {% endcomment %}
-  {% with n_todas=True %}
-      {% include "edicoes.html" %}
-  {% endwith %}
+  {% include "edicoes.html" with n_todas=True %}
   
   <div class="atualizar">
 
@@ -188,11 +186,6 @@
 
   </div>
 
-  {% with tabela='Estudantes' %}
-    {% include "edicoes_ajax.html" %}
-  {% endwith %}
-
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
+  {% include "edicoes_ajax.html" with tabela='Estudantes' %}
   
 {% endblock %}
