--- a/estudantes/templates/mensagem_feedback_final.html
+++ b/estudantes/templates/mensagem_feedback_final.html
@@ -14,19 +14,19 @@ Estamos encerrando o PFE, e gostaríamos de saber o impacto do PFE na sua vida p
 
 %0D%0A%0D%0A
 {% if formatada %}&nbsp;&nbsp;&nbsp;&nbsp;{% else %}%20%20%20%20{% endif %}
-&bull; O quanto você recomendaria fazermos um projeto de PFE nos próximos semestres com a empresa que fez o PFE?
+&bull; O quanto você recomendaria fazermos um projeto de PFE nos próximos semestres com a empresa que fez o PFE%3F
 
 %0D%0A
 {% if formatada %}&nbsp;&nbsp;&nbsp;&nbsp;{% else %}%20%20%20%20{% endif %}
-&bull; Agora que você conhece mais da empresa, essa seria uma das primeiras opções para você fazer estágio ou ser contratado de forma efetiva?
+&bull; Agora que você conhece mais da empresa, essa seria uma das primeiras opções para você fazer estágio ou ser contratado de forma efetiva%3F
 
 %0D%0A
 {% if formatada %}&nbsp;&nbsp;&nbsp;&nbsp;{% else %}%20%20%20%20{% endif %}
-&bull; Você buscaria estágio nessa empresa?
+&bull; Você buscaria estágio nessa empresa%3F
 
 %0D%0A
 {% if formatada %}&nbsp;&nbsp;&nbsp;&nbsp;{% else %}%20%20%20%20{% endif %}
-&bull; Você já está trabalhando (ou em vias de trabalhar) em alguma empresa?
+&bull; Você já está trabalhando (ou em vias de trabalhar) em alguma empresa%3F
 
 %0D%0A%0D%0A
 {% if formatada %}&nbsp;&nbsp;&nbsp;&nbsp;{% else %}%20%20%20%20{% endif %}
@@ -39,9 +39,6 @@ Aproveitamos e nos colocamos a disposição para qualquer conversa/esclareciment
 %0D%0A
 {% if formatada %}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{% else %}%20%20%20%20%20%20%20%20{% endif %}
 PFE <pfe@insper.edu.br>
-%0D%0A
-{% if formatada %}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{% else %}%20%20%20%20%20%20%20%20{% endif %}
-Carreiras <carreiras@insper.edu.br>
 
 %0D%0A%0D%0A
 {% if formatada %}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{% else %}%20%20%20%20%20%20%20%20%20%20%20%20{% endif %}
