--- a/professores/templates/professores/bancas_index.html
+++ b/professores/templates/professores/bancas_index.html
@@ -44,6 +44,7 @@
         navLinks: true, // can click day/week names to navigate views
         businessHours: true, // display business hours
         editable: true,
+        height: "auto",
         events: [
           {% for banca in bancas %} 
             {
