--- a/professores/templates/professores/dinamicas_index.html
+++ b/professores/templates/professores/dinamicas_index.html
@@ -46,6 +46,7 @@
         navLinks: true, // can click day/week names to navigate views
         businessHours: true, // display business hours
         editable: true,
+        height: "auto",
         eventTimeFormat: {
           hour: '2-digit', //2-digit, numeric
           minute: '2-digit', //2-digit, numeric
